--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "bootstrap-grid-only-css": "^4.1.3",
     "next": "^13.2.3",
-    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^8.0.5",
+    "sass": "^1.58.3"
   },
   "devDependencies": {
     "eslint": "8.12.0",
