--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "bootstrap-grid-only-css": "^4.1.3",
+    "bootstrap": "^5.2.3",
     "next": "^13.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
