--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.5",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "eslint": "8.12.0",
