--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "bootstrap": "^5.2.3",
     "next": "^13.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.5",
     "sass": "^1.58.3",
