--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.0.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@rive-app/react-canvas": "^3.0.45",
     "bootstrap": "^5.2.3",
     "next": "^13.2.3",
     "react": "^18.1.0",
